--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "render-cmd",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "The client tools to generate a project for renderJs",
   "author": {
     "name": "mutian",
@@ -15,6 +15,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^11.0.0",
+    "download-git-repo": "^3.0.2",
     "inquirer": "^9.2.7",
     "log-symbols": "^5.1.0"
   }
